k8s/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: website
          image: ahmedsayedtalib/website:885d54f
