k8s/overlays/dev/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-dev-service
spec:
  selector: 
    app: website
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31114
